@@ -31,29 +31,25 @@
 #include "../pics/edit.xpm"
 #include "../pics/newchart.xpm"
 #include "../pics/delete.xpm"
+#include "../pics/disable.xpm"
 
 #include <QLayout>
-#include <QPushButton>
-#include <QDialogButtonBox>
 
 ScriptDialog::ScriptDialog ()
 {
+//  _helpFile = "Script.html";
+  
   setWindowTitle("QtStalker" + g_session + ": " + tr("Script Manager"));
 
-  QVBoxLayout *vbox = new QVBoxLayout;
-  vbox->setSpacing(5);
-  vbox->setMargin(5);
-  setLayout(vbox);
+  // buttons
+  _buttonBox->removeButton(_okButton);
+  _buttonBox->removeButton(_cancelButton);
 
-  _tabs = new QTabWidget;
-  vbox->addWidget(_tabs);
-
-  // buttonbox
-  QDialogButtonBox *bbox = new QDialogButtonBox(QDialogButtonBox::Help);
-
-  QPushButton *b = bbox->addButton(QDialogButtonBox::Close);
+  QPushButton *b = new QPushButton;
+  b->setText(tr("Close"));
+  b->setIcon(QIcon(disable_xpm));
   connect(b, SIGNAL(clicked()), this, SLOT(closeDialog()));
-  vbox->addWidget(bbox);
+  _buttonBox->addButton(b, QDialogButtonBox::ActionRole);
 
   createMainPage();
 
